tests/tools/turndefs/routeSampler/errors/walk_input_fromTo/errors.tools
Warning: Ignoring walk in file 'input_routes.rou.xml' because it does not contain edges.
Error: no input routes loaded
